--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,68 +5,69 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-1.04MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6003, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-431.3KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20722, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-218.1KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-761.7KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20746, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-421.5KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20732, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15021, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-221.0KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20733, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-237.7KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20734, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.05MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20721, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-400.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20731, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-789.7KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20725, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-796.3KB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15009, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-9.57MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15020, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-431.3KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20722, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.65MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.18MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.68MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-5.07MB/s(Youtube:不良林), server: 172.104.48.151, port: 8080, type: vmess, uuid: c8bab0e9-fad7-46ef-e74a-9cb2022ed9c9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 172.104.48.151}}
+  - {name: 🇺🇸 美国-2.24MB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-761.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-421.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-237.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-400.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-789.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-796.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-761.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-421.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-237.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-400.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-789.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-796.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-761.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-421.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-237.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-400.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-789.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-796.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-789.7KB/s(Youtube:不良林)
       - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,47 +75,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-761.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-421.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-237.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-400.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-789.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-796.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-761.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-421.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-237.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-400.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-789.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-796.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-761.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-421.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-237.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-400.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-789.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-796.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-761.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-421.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-237.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-400.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-789.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-796.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
