--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,117 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-254.7KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20731, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-8.08MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15004, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-405.2KB/s(Youtube:不良林), server: cmb.3sx.xyz, port: 21003, type: ss, cipher: chacha20-ietf-poly1305, password: d80412a5-1757-48a5-b493-e2de1265cc11}
-  - {name: 🇭🇰 香港-660.6KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20722, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-197.9KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20725, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.79MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-395.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 匈牙利-1.63MB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.34MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-2.86MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-962.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20747, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-571.3KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20746, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-9.63MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15019, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: rn.uuuuuu.eu, port: 443, type: trojan, password: !<str> 888888, sni: rn.uuuuuu.eu, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-964.3KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20732, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15007, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.82MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.28MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇭🇰 香港-323.8KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20726, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1021.6KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20723, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-254.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-405.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-660.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-197.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 匈牙利-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-964.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-254.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-405.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-660.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-197.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 匈牙利-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-964.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-254.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-405.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-660.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-197.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 匈牙利-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-964.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-660.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-197.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-254.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-405.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-660.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-197.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 匈牙利-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-964.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-254.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-405.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-660.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-197.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 匈牙利-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-964.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-254.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-405.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-660.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-197.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 匈牙利-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-964.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-254.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-405.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-660.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-197.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 匈牙利-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-964.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
